H3CIPMSJAVA-20180830/src/objects/BatchPeriod__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>batch执行取得case范围</description>
    <fields>
        <fullName>CSC_Manufactured_date__c</fullName>
        <label>CSC Manufactured date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_number__c</fullName>
        <label>Case number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberDay__c</fullName>
        <label>NumberDay</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Batch Period</label>
</CustomObject>